--- a/templates/client/boutique/panier_jean.html
+++ b/templates/client/boutique/panier_jean.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="bg-light p-3">
-            <h1>Les jeans</h1>
+            <h1>LES JEANS</h1>
         </div>
 
         <div class="row">
