--- a/templates/admin/commandes/show.html
+++ b/templates/admin/commandes/show.html
@@ -1,14 +1,14 @@
 {% extends "admin/layout_admin.html" %}
 {% block body %}
     <div class="container-fluid">
-        {% if articles_commande %}
+        {% if jeans_commande %}
             <h3>Recapitulatifs de la commande selectionnée</h3>
             <table class="table">
                 <thead class="thead-dark">
                     <tr><th>Nom</th><th>Quantite</th><th>Prix</th><th>Prix total</th></tr>
                 </thead>
                 <tbody>
-                        {% for ligne in articles_commande %}
+                        {% for ligne in jeans_commande %}
                              <tr>
                                 <td>{{ ligne.nom }}
                                 {% if ligne.nb_declinaisons is defined and ligne.nb_declinaisons > 1 %}
