--- a/templates/admin/coupe_jean/add_coupe_jean.html
+++ b/templates/admin/coupe_jean/add_coupe_jean.html
@@ -9,7 +9,7 @@
   {% if error %}
     <p class=error><strong>Error:</strong> {{ error }}
   {% endif %}
-  <form method="post" action="/admin/coupe-jean/add" {#action="{{ url_for('valid_add_type_jean') }}#}>
+  <form method="post" action="/admin/coupe_jean/add" {#action="{{ url_for('valid_add_type_jean') }}#}>
     <fieldset>
         <legend> Créer un type d'jean</legend>
     <div class="mb-3">
