--- a/templates/admin/coupe_jean/show_coupe_jean.html
+++ b/templates/admin/coupe_jean/show_coupe_jean.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <h3>Déclinaison et/ou coupe d'jean (catégorie)</h3>
-<a class="btn btn-outline-success" href="/admin/coupe-jean/add">ajouter un coupe d'jean</a>
+<a class="btn btn-outline-success" href="/admin/coupe_jean/add">ajouter un coupe d'jean</a>
 <br><br>
 
 <table class="table">
