--- a/templates/admin/coupe_jean/edit_coupe_jean.html
+++ b/templates/admin/coupe_jean/edit_coupe_jean.html
@@ -8,14 +8,14 @@
   {% if error %}
     <p class=error><strong>Error:</strong> {{ error }}
   {% endif %}
-  <form method="post" action="/admin/coupe-article/edit">
+  <form method="post" action="/admin/coupe_jean/edit">
     <fieldset>
-        <legend> Modifier un coupe d'article</legend>
+        <legend> Modifier un coupe de jean</legend>
         <div class="mb-3">
-        <input type="hidden" name="id_coupe_article" size="18" value="{{ coupe_article.id_coupe_article }}" id="id">
+        <input type="hidden" name="id_coupe_jean" size="18" value="{{ coupe_jean.id_coupe_jean}}" id="id">
         <label for="libelle">libellé</label><br>
 
-        <input class="form-select" type="text" name="libelle" size="18" value="{{ coupe_article.libelle }}" id="libelle"><br>
+        <input class="form-select" type="text" name="libelle" size="18" value="{{ coupe_jean.libelle }}" id="libelle"><br>
         </div>
         <div class="col-12">
         <button class="btn btn-primary" type="submit">Valider</button>
