--- a/templates/admin/jean/edit_declinaison_jean.html
+++ b/templates/admin/jean/edit_declinaison_jean.html
@@ -6,19 +6,19 @@
 {% block body %}
     <h2>modifier la déclinaison d'un article </h2>
         <div class="row mt-5">
-            article : <strong>{{ declinaison_article.nom }}</strong><br>
-            {% if declinaison_article.image_article is defined and declinaison_article.image_article is not none %}
-            <img class="card-img-top rounded mx-4 d-block"  style="width:200px; height:200px; border: 1px solid black; padding: 25px;"  src="{{ url_for('static', filename = 'images/')}}{{ declinaison_article.image_article}}"  alt="image  de {{ declinaison_article["libelle"] }}" >
+            jean : <strong>{{ declinaison_jean.nom }}</strong><br>
+            {% if declinaison_jean.image_jean is defined and declinaison_jean.image_jean is not none %}
+            <img class="card-img-top rounded mx-4 d-block"  style="width:200px; height:200px; border: 1px solid black; padding: 25px;"  src="{{ url_for('static', filename = 'images/')}}{{ declinaison_jean.image_jean}}"  alt="image  de {{ declinaison_jean["libelle"] }}" >
             {% else %}
-            <i class="card-img-top rounded mx-4 d-block">pas de photo</i>{#{{ declinaison_article|pprint }}#}
+            <i class="card-img-top rounded mx-4 d-block">pas de photo</i>{#{{ declinaison_jean|pprint }}#}
             {% endif %}
 
             <div class="w-25">
-                <form class="w-190" method="post" action="/admin/declinaison_article/edit" enctype="multipart/form-data">
-                    <input type="hidden" value="{{ declinaison_article.id_declinaison_article }}" name="id_declinaison_article">
-                    <input type="hidden" value="{{ declinaison_article.article_id }}" name="id_article">
+                <form class="w-190" method="post" action="/admin/declinaison_jean/edit" enctype="multipart/form-data">
+                    <input type="hidden" value="{{ declinaison_jean.id_declinaison_jean }}" name="id_declinaison_jean">
+                    <input type="hidden" value="{{ declinaison_jean.jean_id }}" name="id_jean">
                     <label for="stock">Stock :
-                        <input name="stock" type="number" min="0.0" step="0.01" value="{{ declinaison_article.stock }}" class="form-control" >
+                        <input name="stock" type="number" min="0.0" step="0.01" value="{{ declinaison_jean.stock }}" class="form-control" >
                     </label>
                     {% if  d_taille_uniq is defined and  d_taille_uniq==1 %}
                         <div>!</div><div><strong>Une taille unique est définie </strong></div>
@@ -29,7 +29,7 @@
                         <select name="id_taille" class="form-select">
                             {% for taille in tailles %}
                                  <option value="{{ taille.id_taille }}"
-                                         {% if taille.id_taille == declinaison_article.taille_id %} selected {% endif %}
+                                         {% if taille.id_taille == declinaison_jean.taille_id %} selected {% endif %}
                                  > {{ taille.libelle }}</option>
                             {% endfor %}
                         </select>
@@ -44,7 +44,7 @@
                         <select name="id_couleur" class="form-select">
                             {% for couleur in couleurs %}
                                  <option value="{{ couleur.id_couleur }}"
-                                         {% if couleur.id_couleur == declinaison_article.couleur_id %} selected {% endif %}
+                                         {% if couleur.id_couleur == declinaison_jean.couleur_id %} selected {% endif %}
                                  > {{ couleur.libelle }}</option>
                             {% endfor %}
                         </select>
@@ -55,7 +55,7 @@
                     <input name="submit" type="submit" value="Modifier" class="btn btn-primary mt-2">
                 </label>
                 </form>
-                <a href="/admin/jean/edit?id_article={{ declinaison_article.article_id }}"><button class="btn btn-secondary  mt-4">annuler</button></a>
+                <a href="/admin/jean/edit?id_article={{ declinaison_jean.jean_id }}"><button class="btn btn-secondary  mt-4">annuler</button></a>
             </div>
         </div>
 {% endblock %}
