--- a/templates/admin/jean/show_jean.html
+++ b/templates/admin/jean/show_jean.html
@@ -10,12 +10,12 @@ articles (tableau de dictionnaires)
 {% extends 'admin/layout_admin.html' %}
 
 {% block title %}
-    <title>afficher les articles</title>
+    <title>afficher les jeans</title>
 {% endblock %}
 
 {% block body %}
-<h3>article</h3>
-<a  class="btn btn-outline-success" href="/admin/article/add">ajouter un article</a>
+<h3>jean</h3>
+<a  class="btn btn-outline-success" href="/admin/jean/add">ajouter un jean</a>
 <br><br>
 {#{{ articles }}#}
 <table class="table">
@@ -30,7 +30,7 @@ articles (tableau de dictionnaires)
         {% for ligne in articles %}
            <tr>
                   <td>{{ ligne.nom }}</td>
-                  <td>{{ ligne.id_article }}</td>
+                  <td>{{ ligne.id_jean }}</td>
                   <td><span style="color: red">{{ ligne.libelle }}</span> ({{ ligne.type_article_id }})</td>
                   <td>{#{ ligne.prix }#}  {{  "{:,.2f} €".format(ligne.prix) }}</td>
                   <td>
@@ -42,7 +42,7 @@ articles (tableau de dictionnaires)
                                 <span style="color: #fd7e14">(⚠️ déclinaison(s) en rupture)</span>
                             {% endif %}
                         {% else %}
-                            <strong class="text-muted">article momentanément indisponible</strong>
+                            <strong class="text-muted">jean momentanément indisponible</strong>
                         {% endif %}
                      {% else %}
                              <strong class="text-muted">déclinaison ND</strong>
@@ -54,7 +54,7 @@ articles (tableau de dictionnaires)
                    <td>
                   {% if ligne.nb_commentaires_nouveaux is defined %}
                      {% if ligne.nb_commentaires_nouveaux > 0 %}
-                         <a href="/admin/article/commentaires?id_article={{ ligne.id_article }}"><strong style="color: red">{{ ligne.nb_commentaires_nouveaux }} avis non lu(s) ⚠️ </strong></a>
+                         <a href="/admin/jean/commentaires?id_jean={{ ligne.id_jean }}"><strong style="color: red">{{ ligne.nb_commentaires_nouveaux }} avis non lu(s) ⚠️ </strong></a>
                      {% else %}
                         <strong class="text-muted"></strong>
                      {% endif %}
@@ -79,16 +79,16 @@ articles (tableau de dictionnaires)
                         {% endif %}
                   </td>
                   <td>
-                      <a  class="btn btn-outline-danger" href="/admin/article/delete?id_article={{ ligne.id_article }}" onclick="return confirm('Are you sure?')" >supprimer</a>
-                      <a  class="btn btn-outline-warning" href="/admin/article/edit?id_article={{ ligne.id_article }}">editer</a>
-                      <a  class="btn btn-outline-warning" href="/admin/article/commentaires?id_article={{ ligne.id_article }}">commentaires</a>
+                      <a  class="btn btn-outline-danger" href="/admin/jean/delete?id_jean={{ ligne.id_jean }}" onclick="return confirm('Are you sure?')" >supprimer</a>
+                      <a  class="btn btn-outline-warning" href="/admin/jean/edit?id_article={{ ligne.id_jean }}">editer</a>
+                      <a  class="btn btn-outline-warning" href="/admin/jean/commentaires?id_article={{ ligne.id_jean }}">commentaires</a>
                   </td>
            </tr>
         {% endfor %}
     {% else %}
             <tr>
                   <td>
-                      pas d'article
+                      pas de jean
                   </td>
            </tr>
     {% endif %}
