--- a/templates/admin/jean/show_jean.html
+++ b/templates/admin/jean/show_jean.html
@@ -27,7 +27,7 @@ articles (tableau de dictionnaires)
     </thead>
     <tbody>
     {% if articles | length >= 1 %}
-        {% for ligne in articles %}
+        {% for ligne in jeans %}
            <tr>
                   <td>{{ ligne.nom }}</td>
                   <td>{{ ligne.id_jean }}</td>
