--- a/templates/admin/commandes/show.html
+++ b/templates/admin/commandes/show.html
@@ -76,7 +76,7 @@
                             <tr id="" {% if commande.etat_id == 1 %} class="table-warning" style="font-weight: bold;"{% endif %}>
                                 <td>{{ commande.login }}</td>
                                 <td>{{ commande.date_achat.strftime('%d-%m-%Y') }}</td>
-                                <td> {{ commande.nbr_articles }} </td>
+                                <td> {{ commande.nbr_jeans }} </td>
                                 <td>
                                     {{ commande.prix_total }}
                                 </td>
