--- a/templates/client/boutique/declinaison_article.html
+++ b/templates/client/boutique/declinaison_article.html
@@ -6,7 +6,7 @@
         <div class="row align-self-right">
         <div class="card col-4 mt-4 p-1">
                             <div class="card-body border-dark rounded p-1">
-                                <a href="/client/article/details?id_jean={{ jean.id_jean }}" >
+                                <a href="/client/jean/details?id_jean={{ jean.id_jean }}" >
                                 <h2 class="card-title">
                                     <span style="color: #0b2e13">{{ jean.nom_jean }}</span><br>
                                     {{ jean.prix_jean }}
