--- a/templates/client/boutique/_panier.html
+++ b/templates/client/boutique/_panier.html
@@ -1,6 +1,6 @@
 <div class="col-7">
             {% if articles_panier | length >= 1 %}
-                <h3>Liste des articles dans mon panier</h3>
+                <h3>Liste des  dans mon panier</h3>
                 <table class="table table-hover table-responsive">
                     <tr>
                         <th style="width: 300px">Nom</th>
