--- a/templates/client/boutique/_panier.html
+++ b/templates/client/boutique/_panier.html
@@ -50,7 +50,7 @@
 
                 </table>
                     {% if validation is defined and validation == 1 %}
-                        <a href="/client/article/show" class="btn btn-primary" >Continuer ma commande</a>
+                        <a href="/client/jean/show" class="btn btn-primary" >Continuer ma commande</a>
                     {% else %}
                     <form action="/client/panier/vider"  style="display: inline-block;"  method="post" >
                         <button class="btn btn-primary"  > Éffacer tout </button>
