--- a/templates/admin/commandes/show.html
+++ b/templates/admin/commandes/show.html
@@ -47,7 +47,7 @@
 
             {% if articles_commande[0].etat_id == 1 %}
             <form action="/admin/commande/valider"  style="display: inline-block;"  method="post">
-                  <input type="hidden" name="idCommande" value="{{ articles_commande[0].id }}">
+                  <input type="hidden" name="idCommande" value="{{ jeans_commande[0].id }}">
                   <button class="btn btn-primary" > Valider (Expédier) </button>
             </form>
             {% endif %}
@@ -65,7 +65,7 @@
                         <tr>
                             <th>login client</th>
                             <th>Date de commande</th>
-                            <th>Nombre d'articles</th>
+                            <th>Nombre de jeans</th>
                             <th>Coût total</th>
                             <th>Etat de la commande</th>
                             <th style="text-align: center;">Options</th>
