--- a/templates/admin/jean/add_commentaire.html
+++ b/templates/admin/jean/add_commentaire.html
@@ -1,27 +1,25 @@
 {% extends 'admin/layout_admin.html' %}
 
 {% block title %}
-    <title>commentaire d'un jean</title>
+    <title>Commentaire d'un jean</title>
 {% endblock %}
 
 {% block body %}
-<h3>jean</h3>
-   <div class="row">
-            <div class="col-5 bg-light p-3">
-        <h3>répondre à un commentaire</h3>
+    <h3>Jean</h3>
+    <div class="row">
+        <div class="col-5 bg-light p-3">
+            <h3>Répondre à un commentaire</h3>
+        </div>
+        <form action="/admin/jean/commentaires/repondre" method="post">
+            <input type="hidden" name="id_jean" value="{{ id_jean }}">
+            <input type="hidden" name="id_utilisateur" value="{{ id_utilisateur }}">
+            <input type="hidden" name="date_publication" value="{{ date_publication }}">
+            <div class="col">
+                <label for="input_commentaire" class="form-label">Mettez un commentaire sur cet jean :</label>
+                <textarea name="commentaire" class="form-control" aria-label="Votre commentaire" id="input_commentaire" placeholder="Votre commentaire"></textarea>
             </div>
-                 <form  action="/admin/jean/commentaires/repondre"  style="display: inline-block;"  method="post" >
-                      <input type="hidden" name="id_jean" value="{{ id_jean }}">
-                      <input type="hidden" name="id_utilisateur" value="{{ id_utilisateur }}">
-                      <input type="hidden" name="date_publication" value="{{ date_publication }}">
-                      <div class="col">
-                       <label for="input_commentaire" class="form-label">Mettez un commentaire sur cet jean : </label>
-                      <textarea name="commentaire" class="form-control" aria-label="Votre commentaire" id="input_commentaire"  placeholder="Votre commentaire"></textarea>
-                      </div>
-                      <button class="btn btn-primary mt-4 mb-4" href="/admin/jean/commentaires/repondre"> répondre </button>
-                 </form>
-
+            <button type="submit" class="btn btn-primary mt-4 mb-4">Répondre</button>
+        </form>
         <a class="btn btn-outline-primary btn-lg" href="/admin/jean/show">Retour vers la page d'accueil</a>
     </div>
-
 {% endblock %}
