--- a/templates/client/jean_info/jean_details.html
+++ b/templates/client/jean_info/jean_details.html
@@ -9,21 +9,21 @@
 <div class="container">
     <div class="text-center card w-auto">
          <h2 class="card-title">
-             <span style="color: #0b2e13">{{ article.nom }}</span> &nbsp;{{ article.prix }} €
+             <span style="color: #0b2e13">{{ jean.nom }}</span> &nbsp;{{ jean.prix }} €
          </h2>
         <div class="card-body">
-        {%  if article.image is not none %}
-            <img class="card-img-top rounded mx-auto d-block"  style="width:100px;height:100px"  src="{{ url_for('static', filename = 'images/')}}{{ article.image }}"  alt="image  de {{ article.nom }}" >
-        {% else %} <img class="card-img-top rounded mx-auto d-block"   style="width:100px;height:100px"   src="{{ url_for('static', filename='images/no_photo.jpeg')}}"  alt="image  de {{ article.nom }}" >
+        {%  if jean.image is not none %}
+            <img class="card-img-top rounded mx-auto d-block"  style="width:100px;height:100px"  src="{{ url_for('static', filename = 'images/')}}{{ jean.image }}"  alt="image  de {{ jean.nom }}" >
+        {% else %} <img class="card-img-top rounded mx-auto d-block"   style="width:100px;height:100px"   src="{{ url_for('static', filename='images/no_photo.jpeg')}}"  alt="image  de {{ jean.nom }}" >
         {% endif %}
 
 
-       {% if commandes_articles.nb_commandes_article is defined and commandes_articles.nb_commandes_article > 0 %}
-                 <br>Vous avez commandé <strong>{{ commandes_articles.nb_commandes_article }} </strong>fois  ce produit
+       {% if commandes_jeanss.nb_commandes_jean is defined and commandes_jeans.nb_commandes_jean > 0 %}
+                 <br>Vous avez commandé <strong>{{ commandes_jeans.nb_commandes_jean }} </strong>fois  ce produit
         {% endif %}
 
         </div>
-        <div class="card-footer text-left"><h6>Description : {{ article.description }}</h6></div>
+        <div class="card-footer text-left"><h6>Description : {{ jean.description }}</h6></div>
     </div>
 
     <hr>  <!-- les notes -->
@@ -31,20 +31,20 @@
     <div class="row">
 
     <div class="col-12">
-        {% if article.moyenne_notes is not defined or  article.nb_notes is not defined or  article.moyenne_notes == None %}
+        {% if jean.moyenne_notes is not defined or  article.nb_notes is not defined or  jean.moyenne_notes == None %}
             <strong>Pas de Note</strong>
         {% else %}
-            <strong>Note moyenne de cet article : {{ article.moyenne_notes }}</strong>&nbsp;({{ article.nb_notes }} note(s))
+            <strong>Note moyenne de ce jean : {{ jean.moyenne_notes }}</strong>&nbsp;({{ jean.nb_notes }} note(s))
         {% endif %}
     </div>
-        {% if commandes_articles.nb_commandes_article is defined and commandes_articles.nb_commandes_article > 0 %}
+        {% if commandes_jeans.nb_commandes_jean is defined and commandes_jeans.nb_commandes_jean > 0 %}
             <div class="col-12">
                 {% if note is defined and note is number %}
 
                     <form  action="/client/note/edit"   method="post" class="row">
-                    <input type="hidden" name="id_article" value="{{ article.id_article }}">
+                    <input type="hidden" name="id_jean" value="{{ jean.id_jean }}">
                     <div class="col-md-3">
-                        <label for="input_note" class="d-flex justify-content-end align-items-end pe-3">Modifier votre note sur cet article : </label>
+                        <label for="input_note" class="d-flex justify-content-end align-items-end pe-3">Modifier votre note sur ce jean : </label>
                     </div>
                     <div class="col-md-1">
                         <input type="number" name="note" id="input_note" step="0.1" min="0" max="5" class="form-control col-md-2" value="{{ note }}" >
@@ -54,16 +54,16 @@
                      </div>
                     </form>
                     <form  action="/client/note/delete"   method="post" class="row">
-                    <input type="hidden" name="id_article" value="{{ article.id_article }}">
+                    <input type="hidden" name="id_article" value="{{ jean.id_jean }}">
                      <div class="col-md-2">
                          <button class="btn btn-primary" > Supprimer votre note </button>
                      </div>
                     </form>
                 {% else %}
                     <form  action="/client/note/add"   method="post" class="row">
-                    <input type="hidden" name="id_article" value="{{ article.id_article }}">
+                    <input type="hidden" name="id_jean" value="{{ jean.id_jean }}">
                     <div class="col-md-3">
-                        <label for="input_note" class="d-flex justify-content-end align-items-end pe-3">Mettre une note  sur cet article : </label>
+                        <label for="input_note" class="d-flex justify-content-end align-items-end pe-3">Mettre une note sur ce jean : </label>
                     </div>
                     <div class="col-md-1">
                         <input type="number" name="note" id="input_note" step="0.1" min="0" max="5" class="form-control col-md-2" value="" >
@@ -74,7 +74,7 @@
                 {% endif %}
             </div>
         {% else %}
-            <small>(seul les clients qui ont acheté cet article peuvent le noter)</small>
+            <small>(seul les clients qui ont acheté ce jean peuvent le noter)</small>
         {% endif %}
     </div>
 
@@ -90,7 +90,7 @@
             <strong>Nombre de commentaire(s) total :  {{nb_commentaires.nb_commentaires_total }}</strong>
         {% endif %}
       </div>
-      {% if commandes_articles.nb_commandes_article is defined and commandes_articles.nb_commandes_article > 0 and
+      {% if commandes_jeans.nb_commandes_jean is defined and commandes_jeans.nb_commandes_jean > 0 and
             ((nb_commentaires.nb_commentaires_utilisateur is defined and nb_commentaires.nb_commentaires_utilisateur <5) or nb_commentaires.nb_commentaires_utilisateur is not defined) %}
           <form  action="/client/commentaire/add"   method="post">
                 <div class="col">
@@ -98,7 +98,7 @@
                      <textarea name="commentaire" class="form-control" aria-label="Votre commentaire" id="input_commentaire"  placeholder="Votre commentaire"></textarea>
                 </div>
               <input type="hidden" name="action" value="add_commentaire">
-              <input type="hidden" name="id_article" value="{{ article.id_article }}">
+              <input type="hidden" name="id_jean" value="{{ jean.id_jean }}">
                 <form  action="/client/comment/add"  style="display: inline-block;"  method="post" >
                         <button class="btn btn-primary mt-2" > Ajouter un commentaire </button>
                 </form>
@@ -137,7 +137,7 @@
                         <td>
                             {% if commentaire.id_utilisateur == session['id_user'] %}
                                   <form  action="/client/commentaire/delete"  style="display: inline-block;"  method="post" >
-                                      <input type="hidden" name="id_article" value="{{ commentaire.id_article }}">
+                                      <input type="hidden" name="id_jean" value="{{ commentaire.id_jean }}">
                                       <input type="hidden" name="id_utilisateur" value="{{ commentaire.id_utilisateur }}">
                                       <input type="hidden" name="date_publication" value="{{ commentaire.date_publication }}">
                                       <button class="btn btn-primary" > supprimer </button>
@@ -151,7 +151,7 @@
             {% endif %}
             </tbody>
         </table>
-        <a class="btn btn-outline-primary btn-lg" href="/client/article/show">Retour vers la page d'accueil</a>
+        <a class="btn btn-outline-primary btn-lg" href="/client/jean/show">Retour vers la page d'accueil</a>
     </div>
 </div>
 
