--- a/templates/client/commandes/show.html
+++ b/templates/client/commandes/show.html
@@ -79,7 +79,7 @@
                                     {% endif %}
                                 </td>
                                 <td style="text-align: center;">
-                                    <a href="/admin/commande/show?id_commande={{ commande.id_commande }}">
+                                    <a href="/client/commande/show?id_commande={{ commande.id_commande }}">
                                         <button class="btn btn-primary" > Details </button>
                                     </a>
                                 </td>
