--- a/templates/admin/_nav_admin.html
+++ b/templates/admin/_nav_admin.html
@@ -22,7 +22,7 @@
              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">jeans</a>
             <div class="dropdown-menu" aria-labelledby="DropdownProduits">
                 <a class="dropdown-item" href="/admin/jean/show"   >Gestion des jeans</a>
-                <a class="dropdown-item" href="/admin/coupe-jean/show"    > Gestion des types d'jeans </a>
+                <a class="dropdown-item" href="/admin/coupe_jean/show"    > Gestion des types d'jeans </a>
                 <a class="dropdown-item" href="/admin/dataviz/etat1"   > votre partie : Dataviz (exemple les types de jeans) </a>
                 <a class="dropdown-item" href="/admin/dataviz/etat2"   > sujet 3  : Dataviz supplémentaire : Map </a>
             </div>
