--- a/templates/admin/commandes/show.html
+++ b/templates/admin/commandes/show.html
@@ -45,7 +45,7 @@
                 {% endif %}
                 </div>
 
-            {% if articles_commande[0].etat_id == 1 %}
+            {% if jeans_commande[0].etat_id == 1 %}
             <form action="/admin/commande/valider"  style="display: inline-block;"  method="post">
                   <input type="hidden" name="idCommande" value="{{ jeans_commande[0].id }}">
                   <button class="btn btn-primary" > Valider (Expédier) </button>
