--- a/templates/admin/coupe_jean/add_coupe_jean.html
+++ b/templates/admin/coupe_jean/add_coupe_jean.html
@@ -1,7 +1,7 @@
 {% extends 'admin/layout_admin.html' %}
 
 {% block title %}
-    <title>ajouter un type d'jean</title>
+    <title>ajouter une coupe jean</title>
 {% endblock %}
 
 {% block body %}
